| * RSS Feed available here:                            |
|                                                       |
|   - https://k1ss.org/news/news.xml                    |
|                                                       |
|                                                       |
+-------------------------------------------------------+

- <a href='/news/20200506a'>05/06/2020: Firefox package changes</a>
- <a href='/news/20200114a'>14/01/2020: Firefox binaries now available</a>
- <a href='/news/20200101a'>01/01/2020: Firefox privacy changes moved</a>
- <a href='/news/20191105a'>05/11/2019: The Wiki is live</a>
- <a href='/news/20191031a'>31/10/2019: ninja replaced by samurai</a>
- <a href='/news/20191015b'>15/10/2019: New python release (3.8.0)</a>
- <a href='/news/20191015a'>15/10/2019: New sudo release (1.8.28)</a>
- <a href='/news/20191010a'>10/10/2019: Mesa 19.2.1 released</a>
- <a href='/news/20190927a'>27/09/2019: LLVM/Rust updated</a>
- <a href='/news/20190921a'>21/09/2019: LLVM/Clang reverted to 8.0.1</a>
- <a href='/news/20190920a'>20/09/2019: Mesa/Rust need to be rebuilt</a>
- <a href='/news/20190911a'>11/09/2019: Please update the package manager</a>
- <a href='/news/20190908a'>08/09/2019: The cache directory has moved</a>
- <a href='/news/20190906a'>06/09/2019: Firefox updated to 69.0</a>
- <a href='/news/20190902a'>02/09/2019: KISS 1.0 released</a>
- <a href='/news/20190831b'>31/08/2019: python-setuptools now a part of python</a>
- <a href='/news/20190831a'>31/08/2019: Removal of ca-certificates</a>
- <a href='/news/20190830b'>30/08/2019: Removal of file</a>
- <a href='/news/20190830a'>30/08/2019: Removal of fakeroot</a>
- <a href='/news/20190828a'>28/08/2019: Removal of atk-bridge-fake</a>
- <a href='/news/20190824b'>24/08/2019: Rust update requires manual intervention</a>
- <a href='/news/20190824a'>24/08/2019: Manual repository fix needed</a>
- <a href='/news/20190823a'>23/08/2019: KISS repository split</a>