@@ -1,0 +1,45 @@
+<!doctype html><html lang=en><link href='data:image/gif;base64,R0lGODlhEAAQAPH/AAAAAP8AAP8AN////yH5BAUAAAQALAAAAAAQABAAAAM2SLrc/jA+QBUFM2iqA2bAMHSktwCCWJIYEIyvKLOuJt+wV69ry5cfwu7WCVp2RSPoUpE4n4sEADs=' rel=icon><title>KISS</title><meta charset=utf-8><meta name=Description content="An independent Linux® distribution with a focus on simplicity and the concept of less is more."><style>body{text-align:center;overflow-y:scroll;font:calc(0.75em + 1vmin) monospace}pre pre{text-align:left;display:inline-block}img{max-width:57ch;display:block;height:auto;width:100%}@media(prefers-color-scheme:dark){body{background:#000;color:#fff}a{color:#6CF}}</style><pre>KISS TURNS 1 YEAR OLD - A big thank you to everyone. <3
+
+<a href=/><b>KISS</b></a><span style='color:#e60000'> 💋</span>  <a href=/news>News</a>  <a href=/blog>Blog</a>  <a href=/install>Install KISS</a>  <a href=/team>Team</a>  <a href=/guidestones>Guidestones</a>  <a href=/faq>FAQ</a>
+
+<a href=/community>Community (<b>NEW</b>)</a>  <a href=/scrots>Scrots</a>  <a href=/package-system>Package System</a>  <a href=/testimonials>Testimonials</a>  <a href=/style>Style</a>
+
+<a href=/ports>Ports (non-x86-64)</a>  <a href=/projects>Software</a>  <a href=/contact>Contact</a>  <a href=/donate>Donate</a>  <a href=https://github.com/kisslinux/>GitHub -&gt;</a>
+
+<pre>
+Subject	GCC 10.1.0 kernel issue
+From	Dylan Araps &lt;dylan@k1ss.org&gt;
+Date	Wed, 9 May 2020 01:05:09 +0100
+
+The kernel compiled with GCC 10.1.0 may crash on boot. This doesn't
+seem to affect every system. I have thus far received a single report
+by an affected user.
+
+Attached below is a patch which has been reported to fix the issue.
+This fix has not yet made it into a kernel release (let alone Linus'
+tree).
+
+I recommend applying the patch if compiling a kernel with GCC 10.1.0.
+An additional note will be added to the installation guide for the
+benefit of new users.
+
+<a href="https://git.kernel.org/pub/scm/linux/kernel/git/tip/tip.git/patch/?id=f670269a42bfdd2c83a1118cc3d1b475547eac22">f670269a42bfdd2c83a1118cc3d1b475547eac22</a>
+
+
+    Dylan
+
+---
+
+<div style='height:200px'>
+The registered trademark Linux(R) is used pursuant to a
+sublicense from the Linux Foundation, the exclusive
+licensee of Linus Torvalds, owner of the mark on a
+world­wide basis.
+
+(C) Dylan Araps 2019-2020
+
+
+<a href="/news/20200509a.txt">View page source</a>
+
+
+</pre></pre>
