@@ -1,0 +1,22 @@
+Subject	GCC 10.1.0 kernel issue
+From	Dylan Araps &lt;dylan@k1ss.org&gt;
+Date	Wed, 9 May 2020 01:05:09 +0100
+
+The kernel compiled with GCC 10.1.0 may crash on boot. This doesn't
+seem to affect every system. I have thus far received a single report
+by an affected user.
+
+Attached below is a patch which has been reported to fix the issue.
+This fix has not yet made it into a kernel release (let alone Linus'
+tree).
+
+I recommend applying the patch if compiling a kernel with GCC 10.1.0.
+An additional note will be added to the installation guide for the
+benefit of new users.
+
+<a href="https://git.kernel.org/pub/scm/linux/kernel/git/tip/tip.git/patch/?id=f670269a42bfdd2c83a1118cc3d1b475547eac22">f670269a42bfdd2c83a1118cc3d1b475547eac22</a>
+
+
+    Dylan
+
+---
